public/css/style.css
/* ... */
@font-face {
    font-family: 'HelveticaNeueCyrLight';
    src: url('../fonts/HelveticaNeueCyrLight.eot');
    src: url('../fonts/HelveticaNeueCyrLight.eot') format('embedded-opentype'),
         url('../fonts/HelveticaNeueCyrLight.woff2') format('woff2'),
         url('../fonts/HelveticaNeueCyrLight.woff') format('woff'),
         url('../fonts/HelveticaNeueCyrLight.ttf') format('truetype'),
         url('../fonts/HelveticaNeueCyrLight.svg#HelveticaNeueCyrLight') format('svg');
}

@font-face {
    font-family: 'HelveticaNeueCyrBold';
    src: url('../fonts/HelveticaNeueCyrBold.eot');
    src: url('../fonts/HelveticaNeueCyrBold.eot') format('embedded-opentype'),
         url('../fonts/HelveticaNeueCyrBold.woff2') format('woff2'),
         url('../fonts/HelveticaNeueCyrBold.woff') format('woff'),
         url('../fonts/HelveticaNeueCyrBold.ttf') format('truetype'),
         url('../fonts/HelveticaNeueCyrBold.svg#HelveticaNeueCyrBold') format('svg');
}

@font-face {
    font-family: 'HelveticaNeueCyrRoman';
    src: url('../fonts/HelveticaNeueCyrRoman.eot');
    src: url('../fonts/HelveticaNeueCyrRoman.eot') format('embedded-opentype'),
         url('../fonts/HelveticaNeueCyrRoman.woff2') format('woff2'),
         url('../fonts/HelveticaNeueCyrRoman.woff') format('woff'),
         url('../fonts/HelveticaNeueCyrRoman.ttf') format('truetype'),
         url('../fonts/HelveticaNeueCyrRoman.svg#HelveticaNeueCyrRoman') format('svg');
}

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
 box-sizing: content-box;
}
/ HTML5 display-role reset for older browsers /
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
 display: block;
}
a, a:hover, a:focus{
    text-decoration: none;
    outline: none;
}
ul{
    list-style-type: none;
}
table {
    border-collapse: collapse;
}


body {
    min-height: 100vh;
    margin: 0;
    font-family: 'HelveticaNeueCyrLight';
    position: relative;
    padding-bottom: 85px;
    box-sizing: border-box;
    padding-top: 60px;
}
.main{
    position: relative;
    width: 100%;
    overflow: hidden;   
}
.images-mask:after{
    content: "";
    position: absolute;
    display: block;
    width: 100%;
    height: 100%;
    background: rgba(4, 13, 3, .65);
   /* background: rgba(51, 51, 51, .8);*/
    top: 0;
    left: 0;
}
/******state animation************/
.page-animation__slide-bottom.ng-enter{
  position: relative;
  animation: upfrombottom .4s ease-out both;
  -webkit-animation: frombottom .4s ease-out both;
}
.page-animation__slide-right.ng-enter{
  position: relative;
  animation: fromright .4s ease-out both;
  -webkit-animation: fromright .4s ease-out both;
}
.page-animation__slide-left.ng-enter{
  position: relative;
  animation: fromleft .4s ease-out both;
  -webkit-animation: fromleft .4s ease-out both;
}
.page-animation__fade.ng-enter{
  position: relative;
  animation: fadeout .5s ease-out both;
  -webkit-animation: fadeout .5s ease-out both;
}

@keyframes fadeout {
 0%{
   opacity: 0;
 }
 100% {
   opacity: 1;
 }
}
@-webkit-keyframes fadeout {
 0%{
   opacity: 0;
 }
 100% {
   opacity: 1;
 }
}

@keyframes fromright {
 0%{
   right: 100%;
 }
 100% {
   right: 0;
 }
}
@-webkit-keyframes fromright {
 0%{
   right: 100%;
 }
 100% {
   right: 0;
 }
}

@keyframes fromleft {
 0%{
   left: 100%;
 }
 100% {
   left: 0;
 }
}
@-webkit-keyframes fromleft {
 0%{
   left: 100%;
 }
 100% {
   left: 0;
 }
}

@keyframes frombottom {
 0%{
   top: 100vh;
 }
 100% {
   top: 0;
 }
}
@-webkit-keyframes frombottom {
 0%{
   top: 100vh;
 }
 100% {
   top: 0;
 }
}

.link-block{
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    display: block;
    z-index: 9;
}
.error{
    color: #d14836;
    font-size: 14px;
    opacity: 1;
    transition: opacity .2s linear;
}
.error.ng-hide{
    opacity: 0;
}
header {
    height: 60px;
    background: url("../img/header1.jpg");
    background-size: cover;
    width: 100%;
    position: fixed;
    left: 0;
    top: 0;
    z-index: 999;
    text-align: center;
}
header img {
    width: 213px;
    padding: 8px 0 20px 30px;
    float: left;
    display: inline-block;
    position: relative;
    z-index: 99;
}
#menu-btn{
    font-size: 0;
    position: absolute;
    display: inline-block;
    width: 0;
    height: 0;
    background: url('../img/menu.png');
    background-size: contain;
    position: absolute;
    z-index: 1;
}
.header-nav {
    display: inline-block;
}

.header-nav li {
    display: inline-block;
    padding: 0 13px;
}
.header-nav li > a {
    color: #B3B3B4;
    font-size: 24px;
    line-height: 62px;
    display: inline-block;
    font-family: 'HelveticaNeueCyrLight';
    transition: all .2s linear .1s;
}
.header-nav li.active > a,
.header-nav li > a:hover {
    color: #86ff00;
    text-decoration: none;
}
.nav-content {
    overflow: hidden;
    text-align: center;
    transition: all .2s ease-out;
    position: relative;
    z-index: 99;
}
/*********________BLOG page_______-*************/
.blog-content{
    width: 59%;
    margin: 0 auto;
    min-width: 940px;
    padding-bottom: 30px;
}
.blog-content h1 {
    font-size: 30px;
    padding-top: 36px;
    font-family: 'HelveticaNeueCyrLight';
}
.blog-content h2{
    font-size: 30px;
    font-family: 'HelveticaNeueCyrLight';
    padding: 23px 0 25px;
}
.blog-content h3 {
    font-size: 18px;
    padding-bottom: 30px;
    font-family: 'HelveticaNeueCyrLight';
}
/* ... */

